--- a/src/main/resources/templates/userSignin.html
+++ b/src/main/resources/templates/userSignin.html
@@ -78,10 +78,8 @@
 										Invalid user Name or password !!
 									</div> -->
 									
-									<div th:if="${param.error}">
-										<p class="text-white text-center">
-											<b>[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</b>
-										</p>
+									<div class="col-lg-8 login-btm login-text text-danger" th:if="${param.error}">
+											[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]
 									</div>
 								
 									<div class="col-lg-8 login-btm login-text text-success"
