--- a/src/main/resources/templates/connections.html
+++ b/src/main/resources/templates/connections.html
@@ -31,7 +31,7 @@
 		<div class="container d-flex justify-content-center mt-5">
 			
 			
-			<table class="table table-bordered table-striped table-hover table-responsive">			
+			<table class="table table-bordered table-striped table-hover">			
 				<thead class="thead-dark">
 					<tr>
 						<th>ID</th>
