--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+				xmlns:sec="http://www.thymeleaf.org">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,11 +23,13 @@
       				<li class="nav-item">
         				<a class="nav-link text-white ml-3" th:href="@{/about}">About</a>
       				</li>
-      				<li class="nav-item">
-        				<a class="nav-link text-white ml-3" href="#" th:href="@{/signup}">Signup</a>
+      				<li class="nav-item" th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
+        				<a th:case="${true}" class="nav-link text-white ml-3" href="/user"><span sec:authentication="principal.username"></span></a>
+        				<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signup}">SignUp</a>
       				</li>
-      				<li class="nav-item">
-        				<a class="nav-link text-white ml-3" href="#" th:href="@{/signin}">Login</a>
+      				<li class="nav-item" th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
+      					<a th:case="${true}" class="nav-link text-white ml-3" href="/logout">Logout</a>
+      					<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signin}">Login</a>
       				</li>
     			</ul>
   			</div>
