--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -4,14 +4,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Registration-User</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-	crossorigin="anonymous">
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 .menu {
 	width: 100%;
@@ -42,10 +38,6 @@ img {
 	width: 60px;
 }
 
-ul, li, a {
-	font-size: 22px;
-}
-
 h1 {
 	font-size: 80px;
 	margin-top: 5%;
@@ -61,48 +53,32 @@ p {
 </style>
 </head>
 <body>
-	<div>
-		<nav class="navbar navbar-expand-lg navbar-light bg-info">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="#"><img class="icon" alt="image"
-					src="/img/brand.png"> </a>
-
-				<button class="navbar-toggler" type="button"
-					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-					aria-controls="navbarSupportedContent" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item"><a class="nav-link active"
-							aria-current="page" th:href="@{/}">Home</a></li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/signin}">Login</a></li>
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/signup}">Register</a></li>
-						<li class="nav-item dropdown"><a
-							class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-							role="button" data-bs-toggle="dropdown" aria-expanded="false">
-								Menu </a>
-							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li><a class="dropdown-item" href="#">FAQ</a></li>
-								<li><hr class="dropdown-divider"></li>
-								<li><a class="dropdown-item" href="#">Feedback</a></li>
-								<li><hr class="dropdown-divider"></li>
-								<li><a class="dropdown-item" href="#">Content</a></li>
-							</ul></li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/about}">About</a></li>
-					</ul>
-					<form class="d-flex">
-						<input class="form-control me-2" type="search"
-							placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success" type="submit">Search</button>
-					</form>
-				</div>
-			</div>
-		</nav>
-	</div>
+	<nav class="navbar navbar-expand-lg" style="background-color: #0265cf;">
+	  <a class="navbar-brand text-white" href="#" th:href="@{/}">Welcome to BBNL Portal</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <ul class="navbar-nav ml-auto text-uppercase">
+	      <li class="nav-item active">
+	        <a class="nav-link text-white ml-3" href="#" th:href="@{/}">Home</a>
+	      </li>
+		  <li class="nav-item">
+			<a class="nav-link text-white ml-3" th:href="@{/about}">About</a>
+		  </li>
+	      <li class="nav-item" th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
+        	<a th:case="${true}" class="nav-link text-white ml-3" href="/user"><span sec:authentication="principal.username"></span></a>
+        	<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signup}">SignUp</a>
+		  </li>
+      	  <li class="nav-item" th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
+      		<a th:case="${true}" class="nav-link text-white ml-3" href="/logout">Logout</a>
+      		<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signin}">Login</a>
+      	  </li>
+	    </ul>
+	  </div>
+	</nav>
+	
 	<div class="container bg-dark text-white">
 		<div class=" text-light content-center m-5 ">
 		<br>
