--- a/src/main/resources/templates/base3.html
+++ b/src/main/resources/templates/base3.html
@@ -22,12 +22,14 @@
 	      <li class="nav-item active">
 	        <a class="nav-link text-white ml-3" href="#" th:href="@{/}">Home</a>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link text-white ml-3" href="/user"><span sec:authentication="principal.username"></span></a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link text-white ml-3" href="#" th:href="@{/logout}">Logout</a>
-	      </li>
+	      <li class="nav-item" th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
+        	<a th:case="${true}" class="nav-link text-white ml-3" href="/user"><span sec:authentication="principal.username"></span></a>
+        	<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signup}">SignUp</a>
+		  </li>
+      	  <li class="nav-item" th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
+      		<a th:case="${true}" class="nav-link text-white ml-3" href="/logout">Logout</a>
+      		<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signin}">Login</a>
+      	  </li>
 	    </ul>
 	  </div>
 	</nav>
