--- a/src/main/resources/templates/base2.html
+++ b/src/main/resources/templates/base2.html
@@ -23,6 +23,11 @@
 	      <li class="nav-item">
 	      		<a class="nav-link text-white ml-3" th:href="@{/user_list}">UserList</a>
 		  </li>
+		  
+		  <li class="nav-item">
+	      		<a class="nav-link text-white ml-3" th:href="@{/crf_list}">CustomerRequestList</a>
+		  </li>
+		  
 	      <li class="nav-item">
 	        <a class="nav-link text-white ml-3" href="/user"><span th:text="${user.firstName+' '+user.lastName}"></span></a>
 	      </li>
