--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -42,76 +42,81 @@ label {
 	</head>
 	<body>
 
-		<nav th:include="base :: navb"></nav>
+	<!-- 	<nav th:include="base :: layout(content)"></nav> -->
+	
+	
 
-		<div class="container mt-5 col-md-5">
+		<div class="container mt-5 col-md-6">
 			<div class="container-fluid mt-5 pt-3">
 				<h2 class="text-center text-white">Update User</h2>
 				<hr class="bg-light mt-4 mb-5">
+				<p> <a th:href="@{/user}" class="btn btn-primary">Back</a></p>
 				<div class="login-form">
 				 <form action="#" th:action="@{/update}" th:object="${user}" method="post">
 					
 					<input type = "hidden" th:field="*{userId}">
-					
-						<div class="form-group">
+					<div class ="row">
+						<div class="col-md-6" >
 							<label for="user" class="label">First Name</label>
 							<input type="text" class="form-control m-2" th:field="*{firstName}">
 						</div>
-						<div class="form-group">
+						<div class="col-md-6" >
 							<label for="user" class="label">Middle Name</label>
 							<input type="text" class="form-control m-2" th:field="*{middleName}">
 						</div>
-						<div class="form-group">
+					</div>
+					<div class="row">
+						<div class="col-md-6">
 							<label for="user" class="label">Last Name</label>
 							<input type="text" class="form-control m-2" th:field="*{lastName}">
 						</div>
-					
-											
-										
-						<div class="form-group">
+						<div class="col-md-6">
 							<label class="label">E-mail ID</label>
 							<input type="email" class="form-control" th:field="*{email}">
 						</div>
-						<div class="form-group">
+					</div>
+					
+					<div class="row">
+						<div class="col-md-6">
 							<label class="label">Password</label>
 							<input type="password" class="form-control" th:field="*{password}">
 						</div>
-						<div class="form-group">
-							<label class="label">Re-type Password</label>
-							<input type="password" class="form-control">
+						
+						<div class="col-md-6">
+								<label class="label">Re-type Password</label>
+								<input type="password" class="form-control">
 						</div>
-					
-					
-					
-						<div class="form-group">
-							<label class="label">Security Question</label>
-							<select class="form-control btn-secondary" th:field="*{secQuestion}">
-								<option value="What is your favorite color?">What is your favorite color?</option>
-								<option value="In what city were you born?">In what city were you born?</option>
-								<option value="What is your mother's maiden name?">What is your mother's maiden name?</option>
-								<option value="What is the name of your first school?">What is the name of your first school?</option>
-								<option value="What was your favorite food as a child?">What was your favorite food as a child?</option>
-							</select>
+					</div>				
+										
+						<div class="row">
+							
+							<div class="col-md-6">
+								<label class="label">Security Question</label>
+								<select class="form-control btn-secondary" th:field="*{secQuestion}">
+									<option value="What is your favorite color?">What is your favorite color?</option>
+									<option value="In what city were you born?">In what city were you born?</option>
+									<option value="What is your mother's maiden name?">What is your mother's maiden name?</option>
+									<option value="What is the name of your first school?">What is the name of your first school?</option>
+									<option value="What was your favorite food as a child?">What was your favorite food as a child?</option>
+								</select>
+							</div>
+							
+							<div class="col-md-6">
+								<label class="label">Security Answer</label>
+								<input type="text" class="form-control" th:field="*{secAnswer}">
+							</div>
+						
+						
+						
 						</div>
-						<div class="form-group">
-							<label class="label">Address</label>
-							<input type="text" class="form-control" th:field="*{address}">
-						</div>
+					<div class="row">
 					
-					
-					
-						<div class="form-group">
-							<label class="label">Security Answer</label>
-							<input type="text" class="form-control" th:field="*{secAnswer}">
-						</div>
-						<div class="form-group">
+						<div class="col-md-6">
 							<label class="label">City</label>
 							<input type="text" class="form-control" th:field="*{city}">
 						</div>
 					
-					
-					
-						<div class="form-group">
+						<div class="col-md-6">
 							<label class="label">Account Type</label>
 							<select class="form-control btn-secondary" th:field="*{role}">
 								<option value="ROLE_CUSTOMER">CUSTOMER</option>
@@ -120,13 +125,26 @@ label {
 								<option value="ROLE_MINISTERIAL">MINISTERIAL USER</option>
 							</select>
 						</div>
-						<div class="form-group">
+					</div>
+					
+					<div class="row">
+					
+						<div class="col-md-6">
 							<label for="m_no" class="label">Mobile Number</label>
 							<input type="tel" class="form-control" th:field="*{mobileNumber}">
 						</div>
 					
-					<div class="form-group">
-						<input type="submit" class="form-control btn btn-success btn-lg btn-block" value="Update">
+						
+						<div class="col-md-6">
+							<label class="label">Address</label>
+							<input type="text" class="form-control" th:field="*{address}">
+						</div>
+					</div>
+					
+					<div class="row mt-4 mb-4 pb-5">					
+						<div class="col-md-12 mb-2">
+							<input type="submit" class="form-control btn btn-success btn-lg btn-block" value="Update">
+						</div>
 					</div>
 					
 					</form>
