--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -8,6 +8,7 @@
 <title>Reset Password</title>
 </head>
 <body>
+	<nav th:include="base3 :: navb3"></nav>
     <div class="container">
         <h1>Reset Password</h1>
         <br />
