--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -42,7 +42,7 @@ label {
 	</head>
 	<body>
 
-	<!-- 	<nav th:include="base :: layout(content)"></nav> -->
+	<nav th:include="base3 :: navb3"></nav>
 	
 	
 
