--- a/src/main/resources/templates/uploadexcel.html
+++ b/src/main/resources/templates/uploadexcel.html
@@ -21,6 +21,7 @@
 	</style>
 </head>
 <body>
+	<nav th:include="base3 :: navb3"></nav>
 	<div class="container mt-5">
 		<div class="row offset-md-3 mt-5">
 			<div class="col-md-6 mt-5">
