--- a/src/main/resources/templates/userlist.html
+++ b/src/main/resources/templates/userlist.html
@@ -36,7 +36,7 @@ ul, li, a {
 </style>
 </head>
 <body>
-	
+	<nav th:include="base3 :: navb3"></nav>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
