--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -3,16 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Registration-User</title>
+<title>About-Page</title>
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-.menu {
-	width: 100%;
-	margin-left: 0px;
-}
+
 
 body {
 	background-image: linear-gradient(380deg, black, indigo);
@@ -25,18 +22,8 @@ li {
 	display: inline-block;
 }
 
-a {
-	color: white;
-}
 
-a:hover {
-	color: orange;
-}
 
-img {
-	height: 50px;
-	width: 60px;
-}
 
 h1 {
 	font-size: 80px;
@@ -45,7 +32,7 @@ h1 {
 
 
 p {
-	font-size: 25px;
+	font-size: 20px;
 }
 .container{
 	border-radius:40px;
@@ -53,37 +40,14 @@ p {
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg" style="background-color: #0265cf;">
-	  <a class="navbar-brand text-white" href="#" th:href="@{/}">Welcome to BBNL Portal</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	
-	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	    <ul class="navbar-nav ml-auto text-uppercase">
-	      <li class="nav-item active">
-	        <a class="nav-link text-white ml-3" href="#" th:href="@{/}">Home</a>
-	      </li>
-		  <li class="nav-item">
-			<a class="nav-link text-white ml-3" th:href="@{/about}">About</a>
-		  </li>
-	      <li class="nav-item" th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
-        	<a th:case="${true}" class="nav-link text-white ml-3" href="/user"><span sec:authentication="principal.username"></span></a>
-        	<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signup}">SignUp</a>
-		  </li>
-      	  <li class="nav-item" th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
-      		<a th:case="${true}" class="nav-link text-white ml-3" href="/logout">Logout</a>
-      		<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signin}">Login</a>
-      	  </li>
-	    </ul>
-	  </div>
-	</nav>
-	
+
+
+	<nav th:include="base3 :: navb3"></nav>
 	<div class="container bg-dark text-white">
 		<div class=" text-light content-center m-5 ">
 		<br>
-			<h1>About</h1>
-			<hr><br>
+			<h2 class="text-center">About</h2>
+			<hr class="bg-light"><br>
 			<p>Bharat Broadband Network Limited is a Special Purpose Vehicle
 				set up under Companies Act by Government of India with an authorized
 				capital of Rs. 1000 Cr. It has been mandated to create the National
