--- a/src/main/resources/templates/userSignup.html
+++ b/src/main/resources/templates/userSignup.html
@@ -23,17 +23,17 @@
 					
 					<div class="row row-cols-3 sec">
 						<div class="group col" id="fname">
-							<label for="user" class="label"><span class="text-danger"> * </span>First Name</label>
-							<input type="text" class="input" name="fname" th:field="*{firstName}" >
+							<label class="label"><span class="text-danger"> * </span>First Name</label>
+							<input type="text" class="input" th:field="*{firstName}" >
 							<small class="formerror"></small>
 						</div>
 						<div class="group col" id="mname">
-							<label for="user" class="label">Middle Name</label>
-							<input type="text" class="input" name="mname" th:field="*{middleName}">
+							<label class="label">Middle Name</label>
+							<input type="text" class="input" th:field="*{middleName}">
 						</div>
 						<div class="group col" id="lname">
-							<label for="user" class="label"><span class="text-danger"> * </span>Last Name</label>
-							<input type="text" class="input" name="lname" th:field="*{lastName}" >
+							<label class="label"><span class="text-danger"> * </span>Last Name</label>
+							<input type="text" class="input" th:field="*{lastName}" >
 							<small class="formerror"></small>
 						</div>
 					</div>
@@ -41,12 +41,12 @@
 					<div class="row row-cols-3 sec">						
 						<div class="group col" id="email">
 							<label class="label"><span class="text-danger"> * </span>E-mail ID</label>
-							<input type="text" class="input" name="email" th:field="*{email}" >
+							<input type="text" class="input" th:field="*{email}" >
 							<small class="formerror"></small>
 						</div>
 						<div class="group col"  id="password">
 							<label class="label"><span class="text-danger"> * </span>Password</label>
-							<input type="password" class="input" name="password" th:field="*{password}" >
+							<input type="password" class="input" th:field="*{password}" >
 							<small class="formerror"></small>
 						</div>
 						<div class="group col" id="repassword">
@@ -69,7 +69,7 @@
 						</div>
 						<div class="group col"  id="address">
 							<label class="label"><span class="text-danger"> * </span>Address</label>
-							<input type="text" class="input" name="address" th:field="*{address}" >
+							<input type="text" class="input" th:field="*{address}" >
 							<small class="formerror"></small>
 						</div>
 					</div>
@@ -77,12 +77,12 @@
 					<div class="row row-cols-2 sec">
 						<div class="group col" id="answer">
 							<label class="label"><span class="text-danger"> * </span>Security Answer</label>
-							<input type="text" class="input" name="answer" th:field="*{secAnswer}" >
+							<input type="text" class="input" th:field="*{secAnswer}" >
 							<small class="formerror"></small>
 						</div>
 						<div class="group col" id="city">
 							<label class="label"><span class="text-danger"> * </span>City</label>
-							<input type="text" class="input" name="city" th:field="*{city}" >
+							<input type="text" class="input" th:field="*{city}" >
 							<small class="formerror"></small>
 						</div>
 					</div>
@@ -99,7 +99,7 @@
 						</div>
 						<div class="group col" id="mobile">
 							<label for="m_no" class="label"><span class="text-danger"> * </span>Mobile Number</label>
-							<input type="tel" class="input" name="mobile" th:field="*{mobileNumber}" >
+							<input type="tel" class="input" th:field="*{mobileNumber}" >
 							<small class="formerror"></small>
 						</div>
 					</div>
@@ -113,8 +113,8 @@
 				
 			</div>
 		</div>
-		<button type="button" th:onclick="showAlert()">Show Alert</button>
+		<script type="text/javascript" th:src="@{/js/user_signup.js}"></script>
 	</body>
 
-	<script type="text/javascript" th:src="@{/js/user_signup.js}"></script>
+	
 </html>
