--- a/src/main/resources/templates/userSignup.html
+++ b/src/main/resources/templates/userSignup.html
@@ -38,7 +38,7 @@
 						</div>
 					</div>
 											
-					<div class="row row-cols-3 sec">						
+					<div class="row row-cols-3">						
 						<div class="group col" id="email">
 							<label class="label"><span class="text-danger"> * </span>E-mail ID</label>
 							<input type="text" class="input" th:field="*{email}" >
