--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -12,7 +12,7 @@
 
 
 body {
-	background-image: linear-gradient(380deg, black, indigo);
+	background-image: linear-gradient(80deg, green,white,orange);
 	background-repeat: no-repeat;
 	background-size: 2100px 1500px;
 }
