--- a/src/main/resources/templates/ServiceProviderInfo.html
+++ b/src/main/resources/templates/ServiceProviderInfo.html
@@ -82,7 +82,7 @@
 		
 	</table> -->
 	<div class="container">
-	<table class="table table-sm">
+	<table class="table table-sm table-responsive">
 		<thead>
 			<tr>
 				<th>Service Provider Id</th>
