--- a/src/main/resources/templates/newConnection.html
+++ b/src/main/resources/templates/newConnection.html
@@ -73,8 +73,9 @@
 						
 					
 					<div class="checkboxy">
-						<input name="cecky" id="checky" value="1" type="checkbox" />
+						<input name="cecky" id="checky" value="1" type="checkbox" required/>
 						<label class="terms">I accept the terms of use</label>
+						<p id="req"></p>
 					</div>
 					<button type="submit" id="submit" class="mr-5">Add Connection</button>
 
