--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -42,7 +42,7 @@ p {
 <body>
 
 
-	<nav th:include="base3 :: navb3"></nav>
+	<nav th:include="base :: navb"></nav>
 	<div class="container bg-dark text-white">
 		<div class=" text-light content-center m-5 ">
 		<br>
