--- a/src/main/resources/templates/EditServiceProviderForm.html
+++ b/src/main/resources/templates/EditServiceProviderForm.html
@@ -22,6 +22,7 @@
 </head>
 <body>
 <!-- As a heading -->
+<nav th:include="base3 :: navb3"></nav>
 <nav class="navbar bg-primary navbar-custom">
   <div class="container-fluid">
     <span class="navbar-brand mb-5 h1 text-white s1">Registration Form</span>
