--- a/src/main/resources/templates/connections.html
+++ b/src/main/resources/templates/connections.html
@@ -9,27 +9,28 @@
 	<body>
 		
 		<nav th:include="base3 :: navb3"></nav>
-		<div class="alert alert-success alert-dismissible fade show register-box text-center" role="alert"
-			style="position: absolute; margin-left: auto; margin-right: auto;
-			left: 0; right: 0; text-align: center; width: 15%;"
-			th:if="${param.success}"> Saved Successfully !!
+		<section class="d-flex justify-content-center">
+		
+		<div class="alert alert-success alert-dismissible fade show d-flex justify-content-center" style="position: absolute;"  role="alert"
+		th:if="${param.success}">Saved Successfully !!
 			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
     			<span aria-hidden="true">&times;</span>
   			</button>
 		</div>
 		
-		<div class="alert alert-warning alert-dismissible fade show register-box text-center" role="alert"
-			style="position: absolute; margin-left: auto; margin-right: auto;
-			left: 0; right: 0; text-align: center; width: 15%;"
+		<div class="alert alert-warning alert-dismissible fade show d-flex justify-content-center" role="alert"
+			style="position: absolute;"
 			th:if="${param.delete}"> Deleted Successfully !!
 			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
     			<span aria-hidden="true">&times;</span>
   			</button>
 		</div>
+		</section>
 		
-		<div class="container d-flex justify-content-center mt-5">
-			
-			
+		<div class="container mt-2">
+			<div class="mb-2" style="position: relative;;">
+				<a class="btn btn-primary" th:href="@{connection/addconnection}">Add new Connection</a>
+			</div>
 			<table class="table table-bordered table-striped table-hover">			
 				<thead class="thead-dark">
 					<tr>
@@ -96,9 +97,6 @@
 			</table>	
 			
 	
-		</div>
-		<div class="text-center">
-		<a class="btn btn-primary" th:href="@{connection/addconnection}">Add new Connection</a>
 		</div>
 	</body>
 </html>
