--- a/src/main/resources/templates/userdashboard.html
+++ b/src/main/resources/templates/userdashboard.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-    			xmlns:sec="http://www.thymeleaf.org"
-				th:replace="base2::layout(~{::section})" >
+    			xmlns:sec="http://www.thymeleaf.org" >
 <head>
 <meta charset="UTF-8">
 <title>User Dashboard</title>
-<style>
-
-
-</style>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-	
-	<section class="text-center m-1 jumbotron back">
+	<nav th:include="base3 :: navb3"></nav>
+	<section class="text-center">
 		<h1 class="m-3">Welcome, <span th:text="${user.firstName+' '+user.lastName}"></span></h1><br>
 		
-		<h3 class="m-2"> <a class="btn btn-primary" th:href="@{/user/connection}">Connection details</a> </h3><br>
+		<a class="btn btn-primary" th:href="@{/user/connection}">Connection details</a>
 		
-		<a class="btn btn-primary mb-3" th:href="@{/user/ServiceProviderList}">Show Service Provider List</a><br>
+		<a class="btn btn-primary" th:href="@{/user/ServiceProviderList}">Service Provider</a>
 		
-		<a class="btn btn-primary mt-3" th:href="@{/user/saveServiceProvider}">Add Service Provider</a>
+		<a class="btn btn-primary" th:href="@{/user/listuser}">User/Customer List</a><br>
 	</section>
 </body>
 </html>
