--- a/src/main/resources/templates/crflist.html
+++ b/src/main/resources/templates/crflist.html
@@ -32,6 +32,12 @@ img {
 	width: 60px;
 }
 
+table {
+  display: block;
+  height: 500px;
+  overflow-y: auto;
+}
+
 </style>
 </head>
 <body>
@@ -40,18 +46,18 @@ img {
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
-				<h1 class="text-center text-light mt-3">ALL CRF LIST</h1>
+				<h1 class="text-center text-light mt-3"><i class="fa-solid fa-people-group"></i>&nbsp;ALL CRF LIST</h1>
 				<hr class="bg-light">
 				<div th:if="${param.success}">
 					<div class="alert alert-success text-center mt-3">You have
 						Successfully Updated</div>
 				</div>
-				<a th:href="@{/logout}" class="btn btn-success float-right mb-2">Logout</a>
+				<a th:href="@{/logout}" class="btn btn-success float-right mb-2"><i class="fa-solid fa-right-from-bracket"></i>&nbsp;Logout</a>
 				
 				
 				<a th:href="@{/export_crf_excel}" class="btn btn-success mb-2 mr-1"><i class="fa-solid fa-file-export"></i>&nbsp;Export-Data-CRF-Excel</a>
 				<marquee class="text-lg text-uppercase text-light">
-					<strong><b>-----------------: The List of Customer Request
+					<strong><b>-----------------:&nbsp;&nbsp;<i class="fa-solid fa-people-group"></i>&nbsp; The List of Customer Request
 							:-----------------</b></strong>
 				</marquee>
 
@@ -130,10 +136,10 @@ img {
 								
 									<td><a class="btn btn-primary btn-sm"
 										th:href="@{/edit_crf/{crfId}(crfId=${user.crfId})}"><i
-											class="fa fa-pencil fa-fw h3"></i>Edit</a></td>
+											class="fa fa-pencil fa-fw"></i>Edit</a></td>
 									<td><a class="btn btn-danger btn-sm"
 										th:href="@{/delete_crf/{crfId}(crfId=${user.crfId})}"><i
-											class="fa fa-trash h3 " aria-hidden="true"></i>Delete</a></td>
+											class="fa fa-trash" aria-hidden="true"></i>Delete</a></td>
 								</tr>
 
 							</tbody>
@@ -141,19 +147,19 @@ img {
 						</table>
 					
 					<p>
-						<a class="btn btn-info" th:href="@{/signup}">Add New
+						<a class="btn btn-info" th:href="@{/signup}"><i class="fa-solid fa-user-plus"></i>&nbsp;Add New
 							User</a>
 							<a class="btn btn-info float-right" th:href="@{/upload_excel}" ><i class="fa-solid fa-file-import"></i>&nbsp;Upload Bulk Data</a>
 							
 					</p>
 					
 					<p class="text-warning container"><b>Note:</b> if you want to upload bulk data through excel and want to download the demo excel sheet then click 
-					<a class="btn btn-success" th:href="@{/download_file}">here</a>
+					<a class="btn btn-success" th:href="@{/download_file}"><i class="fa-solid fa-file-export"></i>&nbsp;Download</a>
 				</p>
 				
 
 				<marquee class="text-lg text-uppercase text-light">
-					<strong><b>-----------------: The List of Customer Request
+					<strong><b>-----------------:&nbsp;&nbsp;<i class="fa-solid fa-people-group"></i>&nbsp; The List of Customer Request
 							:-----------------</b></strong>
 				</marquee>
 				
