--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="css/home_style.css">
+		<link rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+			integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+			crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<title>Welcome to BBNL</title>
 	</head>
 	<body>
@@ -18,18 +22,18 @@
   			<div class="collapse navbar-collapse" id="navbarSupportedContent">
     			<ul class="navbar-nav ml-auto text-uppercase">
       				<li class="nav-item active">
-       					<a class="nav-link text-white ml-3" href="#" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
+       					<a class="nav-link text-white ml-3" href="#" th:href="@{/}"><i class="fa-solid fa-house"></i>&nbsp;Home <span class="sr-only">(current)</span></a>
       				</li>
       				<li class="nav-item">
         				<a class="nav-link text-white ml-3" th:href="@{/about}">About</a>
       				</li>
       				<li class="nav-item" th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
-        				<a th:case="${true}" class="nav-link text-white ml-3" href="/user"><span sec:authentication="principal.username"></span></a>
-        				<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signup}">SignUp</a>
+        				<a th:case="${true}" class="nav-link text-white ml-3" href="/user"><i class="fa-solid fa-user"></i>&nbsp;<span sec:authentication="principal.username"></span></a>
+        				<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signup}"><i class="fa-solid fa-user"></i>&nbsp;SignUp</a>
       				</li>
       				<li class="nav-item" th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
       					<a th:case="${true}" class="nav-link text-white ml-3" href="/logout">Logout</a>
-      					<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signin}">Login</a>
+      					<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signin}"><i class="fa-solid fa-right-to-bracket"></i>&nbsp;Login</a>
       				</li>
     			</ul>
   			</div>
