--- a/src/main/resources/templates/userSignin.html
+++ b/src/main/resources/templates/userSignin.html
@@ -4,6 +4,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<link rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+			integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+			crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<title>BBNL Login Page</title>
 		<link rel="stylesheet" type="text/css" href="css/user_signin.css">
 	</head>
@@ -18,16 +22,16 @@
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="navbar-nav ml-auto text-uppercase">
 			      <li class="nav-item active">
-			        <a class="nav-link text-white ml-3" href="#" th:href="@{/}">Home</a>
+			        <a class="nav-link text-white ml-3" href="#" th:href="@{/}"><i class="fa-solid fa-house"></i>&nbsp;Home</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link text-white ml-3" href="#">About</a>
+			        <a class="nav-link text-white ml-3" th:href="@{/about}">About</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link text-white ml-3" href="#" th:href="@{/signup}">Signup</a>
+			        <a class="nav-link text-white ml-3" href="#" th:href="@{/signup}"><i class="fa-solid fa-user-plus"></i>&nbsp;Signup</a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link text-white ml-3" href="#" th:href="@{/signin}">Login</a>
+			        <a class="nav-link text-white ml-3" href="#" th:href="@{/signin}"><i class="fa-solid fa-right-to-bracket"></i>&nbsp;Login</a>
 			      </li>
 			    </ul>
 			  </div>
