--- a/src/main/resources/templates/userSignup.html
+++ b/src/main/resources/templates/userSignup.html
@@ -5,6 +5,10 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 		<title>BBNL- Signup</title>
 		<link rel="stylesheet" type="text/css" href="css/user_signup.css">
+		<link rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+			integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+			crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
 	<body>
 
@@ -12,7 +16,7 @@
 
 		<div class="login-wrap mt-5">
 			<div class="login-html">
-				<label class="tab">Sign up User</label>
+				<label class="tab"><i class="fa-solid fa-user"></i>&nbsp;Sign up User</label>
 				<div class="hr"></div>
 				<div class="login-form">
 				 <form onsubmit="return validateForm();" action="#" name="signupform" th:action="@{/saveuser}" th:object="${user}" method="post">
