--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,7 +32,7 @@
         				<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signup}"><i class="fa-solid fa-user"></i>&nbsp;SignUp</a>
       				</li>
       				<li class="nav-item" th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
-      					<a th:case="${true}" class="nav-link text-white ml-3" href="/logout">Logout</a>
+      					<a th:case="${true}" class="nav-link text-white ml-3" href="/logout"><i class="fa-solid fa-right-from-bracket"></i>&nbsp;Logout</a>
       					<a th:case="${false}" class="nav-link text-white ml-3" href="#" th:href="@{/signin}"><i class="fa-solid fa-right-to-bracket"></i>&nbsp;Login</a>
       				</li>
     			</ul>
