--- a/src/main/resources/templates/uploadexcel.html
+++ b/src/main/resources/templates/uploadexcel.html
@@ -11,17 +11,53 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
 	integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
-	crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+	crossorigin="anonymous" referrerpolicy="no-referrer">
 <style type="text/css">
 body {
-	background-image: linear-gradient(240deg,green, black, aqua);
+	background-image: linear-gradient(240deg, green, black, aqua);
 	background-size: 2100px 1500px;
 }
 </style>
 </head>
 <body>
-	<nav th:include="base3 :: navb3"></nav>
+
+	<nav class="navbar navbar-expand-lg" style="background-color: #0265cf;">
+		<div class="container-fluid">
+			<a class="navbar-brand text-white" href="#" th:href="@{/}">Welcome
+				to BBNL Portal</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ms-auto text-uppercase">
+					<li class="nav-item active"><a
+						class="nav-link text-white ml-3" href="#" th:href="@{/}"><i
+							class="fa-solid fa-house"></i>&nbsp;Home</a></li>
+					<li class="nav-item"
+						th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
+						<a th:case="${true}" class="nav-link text-white ml-3" href="/user"><i
+							class="fa-solid fa-user"></i>&nbsp;<span
+							sec:authentication="principal.username"></span></a> <a
+						th:case="${false}" class="nav-link text-white ml-3" href="#"
+						th:href="@{/signup}"><i class="fa-solid fa-user-plus"></i>&nbsp;SignUp</a>
+					</li>
+					<li class="nav-item"
+						th:switch="${#authentication}? ${#authorization.expression('isAuthenticated()')} : ${false}">
+						<a th:case="${true}" class="nav-link text-white ml-3"
+						href="/logout"><i class="fa-solid fa-right-from-bracket"></i>&nbsp;Logout</a>
+						<a th:case="${false}" class="nav-link text-white ml-3" href="#"
+						th:href="@{/signin}"><i class="fa-solid fa-right-to-bracket"></i>&nbsp;Login</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+
 	<div id="demo" class="carousel slide" data-bs-ride="carousel">
 
 		<!-- Indicators/dots -->
@@ -35,13 +71,16 @@ body {
 		<!-- The slideshow/carousel -->
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="img/add_conn.jpg" alt="Los Angeles" class="d-block w-100" style="width:100%; height:650px;">
+				<img src="img/add_conn.jpg" alt="Los Angeles" class="d-block w-100"
+					style="width: 100%; height: 650px;">
 			</div>
 			<div class="carousel-item">
-				<img src="img/connections_bg.jpg" alt="Chicago" class="d-block w-100" style="width:100%; height:650px;">
+				<img src="img/connections_bg.jpg" alt="Chicago"
+					class="d-block w-100" style="width: 100%; height: 650px;">
 			</div>
 			<div class="carousel-item">
-				<img src="img/user_signup.jpg" alt="New York" class="d-block w-100" style="width:100%; height:650px;">
+				<img src="img/user_signup.jpg" alt="New York" class="d-block w-100"
+					style="width: 100%; height: 650px;">
 			</div>
 		</div>
 
@@ -55,13 +94,16 @@ body {
 			<span class="carousel-control-next-icon"></span>
 		</button>
 	</div>
-	
+
 	<div class="container mt-5">
 		<div class="row offset-md-3 mt-5">
 			<div class="col-md-6 mt-5">
-				
-				
-				<h2 class="container bg-secondary text-center text-white p-3 rounded"><i class="fa-solid fa-file-import"></i>&nbsp;Upload Excel Bulk Data</h2>
+
+
+				<h2
+					class="container bg-secondary text-center text-white p-3 rounded">
+					<i class="fa-solid fa-file-import"></i>&nbsp;Upload Excel Bulk Data
+				</h2>
 				<hr class="text-light">
 				<div th:if="${error !=null}">
 					<p class="text-danger">[[${error}]]</p>
@@ -72,13 +114,15 @@ body {
 						<b>[[${message}]]</b>
 					</p>
 				</div>
-				
+
 				<div th:if="${param.success}">
-					<div class="alert alert-success text-center mt-3">File Is Uploaded and Save To The Database !!</div>
+					<div class="alert alert-success text-center mt-3">File Is
+						Uploaded and Save To The Database !!</div>
 				</div>
-				
+
 				<div th:if="${param.error}">
-					<div class="alert alert-warning text-center mt-3">Please upload excel file format !!</div>
+					<div class="alert alert-warning text-center mt-3">Please
+						upload excel file format !!</div>
 				</div>
 				<div>
 					<p class="text-center text-success h3">
@@ -86,24 +130,44 @@ body {
 					</p>
 				</div>
 				<div class="container p-3 bg-dark rounded">
-				<form class="m-4" th:action="@{/upload_excel}" method="post" enctype="multipart/form-data">
+					<form class="m-4" th:action="@{/upload_excel}" method="post"
+						enctype="multipart/form-data">
 
-					<div class="form-group text-center">
-						<input type = "file" name="file" class="text-center form-control" required autofocus />
-					</div>
+						<div class="form-group text-center">
+							<input type="file" name="file" class="text-center form-control"
+								required autofocus />
+						</div>
 
 
 
-					<div class="form-group text-center mt-3 mb-3">
-						<button type="submit" class="btn btn-info container">Upload File</button>
-					</div>
+						<div class="form-group text-center mt-3 mb-3">
+							<button type="submit" class="btn btn-info container">Upload
+								File</button>
+						</div>
 
-				</form>
+					</form>
 				</div>
 			</div>
 		</div>
-	</div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	</div>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
